2016-01-16  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs:
	* DiscImageChef.CommonTypes.csproj:
	  Refactor most disk references to media.

2015-12-31  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Added Acorn Archimedes and Commodore 15xx floppies.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Added support for CD-V.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Added DVD-RW DL, DVD-Download, HD DVD-R DL and HD DVD-RW DL.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	* DiscImageChef.CommonTypes.csproj:
	  Moved DiskType to commons.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.CommonTypes.csproj:
	  Upgrade .NET version to 4.0.

2015-10-12  Natalia Portillo  <claunia@claunia.com>

	* Partition.cs:
	  Added standard header.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* Partition.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.CommonTypes.csproj:
	  Moved disc image plugins to a separate library.
